--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,5 +19,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TTT4850LYDENAVBYEN_A54CF }}'
           channelId: live
           projectId: ttt4850lydenavbyen-a54cf
-          working-directory: lyden_av_byen
+          entryPoint: lyden_av_byen
           
