--- a/lyden_av_byen/package.json
+++ b/lyden_av_byen/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "firebase": "^8.10.0",
+    "fs": "^0.0.1-security",
+    "gpx-parser-builder": "^1.0.2",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
