--- a/lyden_av_byen/package.json
+++ b/lyden_av_byen/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "colormap": "^2.3.2",
     "firebase": "^8.10.0",
     "fs": "^0.0.1-security",
     "gpx-parser-builder": "^1.0.2",
     "leaflet": "^1.7.1",
+    "point-in-polygon": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
