--- a/lyden_av_byen/public/manifest.json
+++ b/lyden_av_byen/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Lyden av byen",
+  "name": "Lyden av byen",
   "icons": [
     {
       "src": "favicon.ico",
