--- a/lyden_av_byen/package.json
+++ b/lyden_av_byen/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "gpx-parser-builder": "^1.0.2",
     "leaflet": "^1.7.1",
+    "ml-regression-multivariate-linear": "^2.0.3",
     "point-in-polygon": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
